--- a/notification.html
+++ b/notification.html
@@ -35,7 +35,7 @@
   <div class="row notify">
         <div class="col-4 col-sm-2">
        <div class="card text-right">
-    <img class="card-img-left" src="Mom.png" alt="Card image cap" style="width: 100%;height: 100%">
+    <img class="card-img-left" src="mom.png" alt="Card image cap" style="width: 100%;height: 100%">
                       </div>
                     </div>
                     <div class="col-8 col-sm-10">
@@ -62,7 +62,7 @@
                         <div class="row justify-content-beggining notify">
         <div class="col-4 col-sm-2">
        <div class="card text-right">
-    <img class="card-img-left" src="Parika.png" alt="Card image cap" style="width: 100%;height: 30%">
+    <img class="card-img-left" src="parika.png" alt="Card image cap" style="width: 100%;height: 30%">
                       </div>
                     </div>
                     <div class="col-8 col-sm-10">
